update sell confirm page and process fee

--- a/obo-stadium/post.html
+++ b/obo-stadium/post.html
@@ -124,7 +124,7 @@
           <div class="avatar-wrapper col-md-2 col-7 mx-auto"><img class="img-fluid avatar" src="./image/post/avatar.png" alt=""/></div>
           <div class="author-info col-md-10 col-12">
             <div class="author">Cody</div>
-            <div class="details">Là một người yêu thích văn hoá sát mặt đất, mình muốn lan toả niềm đam mê của bản thân đến với tất cả mọi người.</div>
+            <div class="details">Là một người yêu thích nền văn hoá sát mặt đất, mình muốn lan toả niềm đam mê của bản thân đến với tất cả mọi người.</div>
             <div class="social-info"><a class="email icon" href="#"><i class="fas fa-envelope"></i></a><a class="facebook icon" href="#"><i class="fab fa-facebook-f"></i></a><a class="twitter icon" href="#"><i class="fab fa-twitter"></i></a></div>
           </div>
         </div>
@@ -278,7 +278,9 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="logo col-md-3 col-12 text-md-left text-center"><img class="img-fluid" src="./image/logo-white.png" alt="logo"/></div>
-          <div class="footer-link col-md-9 col-12 d-flex justify-content-md-end align-items-center flex-md-row flex-column"><a class="item" href="./faqs.html">Các câu hỏi thường gặp</a><a class="item" href="./rules.html">Điều khoản</a><a class="item" href="./policy.html">Chính sách</a></div>
+          <div class="footer-link col-md-9 col-12 d-flex justify-content-md-end align-items-center flex-md-row flex-column">
+            <div class="footer-menu"><a class="item" href="./faqs.html">Các câu hỏi thường gặp</a><a class="item" href="./rules.html">Điều khoản</a><a class="item" href="./policy.html">Chính sách</a></div>
+          </div>
         </div>
       </div>
     </footer>
