--- a/obo-stadium/sell-confirm.html
+++ b/obo-stadium/sell-confirm.html
@@ -22,9 +22,8 @@
     <!-- Common CSS-->
     <link rel="stylesheet" type="text/css" href="./css/main.css"/>
     <link rel="stylesheet" type="text/css" href="./css/except-home-page.css"/>
-    <link rel="stylesheet" type="text/css" href="./css/used-in-js.css"/>
-    <link rel="stylesheet" type="text/css" href="./css/rules.css"/>
-    <title>Chính sách bảo mật</title>
+    <link rel="stylesheet" type="text/css" href="./css/congrats.css"/>
+    <title>Xin chúc mừng</title>
     <link rel="shortcut icon" href="./image/favicon.ico" type="image/x-icon"/>
   </head>
   <body>
@@ -50,25 +49,73 @@
       </nav>
     </header>
     <main>
-      <div class="breadcrumb container"><a class="previous-page" href="./index.html">Trang chủ</a><i class="fas fa-chevron-right arrow"></i><span class="current-page">Chính sách bảo mật</span></div>
-      <section class="main-content container">
-        <div class="about-obo">
-          <h2 class="h2">Chính sách bảo mật</h2>
+      <div class="main-wrapper container-fluid">
+        <div class="header">
+          <h1 class="h1 title">Xin ch&uacute;c m&#x1EEB;ng</h1>
+          <div class="sub-title">Bạn đã bán sản phẩm thành công, vui lòng kiểm tra lại thông tin đơn hàng bán ở dưới đây</div>
         </div>
-        <div class="content">
-          <p><b>1. Mục đích áp dụng</b></p>
-          <p>Chính sách bảo mật và chia sẻ thông tin này (“Chính Sách”) nhằm đảm bảo an toàn thông tin liên quan đến các tổ chức, cá nhân tham gia truy cập và/hoặc giao dịch trên website www.obostadium.com thuộc quyền sở hữu của Công ty Cổ phần Dịch vụ Thương Mại Tổng hợp OBO Stadium (sau đây gọi chung là “OBO Stadium”).</p>
-          <p>Chính Sách này mô tả cách OBO Stadium tiếp nhận, tổng hợp, lưu giữ, sử dụng và bảo vệ thông tin của các tổ chức, cá nhân tham gia truy cập, giao dịch trên OBO Stadium (“Khách Hàng”). Việc Khách Hàng truy cập hoặc thực hiện giao dịch trên OBO Stadium được hiểu là Khách Hàng đã đọc, hiểu và đồng ý tuân thủ Chính Sách này, kể cả các phiên bản sửa đổi, bổ sung của Chính Sách. Phiên bản sửa đổi, bổ sung Chính Sách này (nếu có) sẽ có hiệu lực sau 5 ngày kể từ ngày việc sửa đổi, bổ sung Chính Sách được thông báo trên OBO Stadium.</p>
-          <p><b>2. Quy định cụ thể</b></p>
-          <p>- Khi Khách Hàng thực hiện giao dịch và/hoặc đăng ký mở tài khoản tại OBO Stadium, tùy từng thời điểm, Khách Hàng phải cung cấp một số thông tin cần thiết cho việc thực hiện giao dịch và/hoặc đăng ký tài khoản (“Thông Tin Khách Hàng”).</p>
-          <p>- Khách Hàng có trách nhiệm đảm bảo những thông tin Khách Hàng cung cấp là đầy đủ và chính xác và luôn cập nhật thông tin để đảm bảo tính đầy đủ và chính xác. OBO Stadium không chịu trách nhiệm giải quyết bất kỳ tranh chấp nào nếu thông tin Khách Hàng cung cấp không chính xác hoặc không được cập nhật hoặc giả mạo. </p>
-          <p>- Thông Tin Khách Hàng, cũng như các thông tin trao đổi giữa Khách Hàng và OBO Stadium, đều được lưu giữ và bảo mật bởi hệ thống của OBO Stadium, riêng thông tin thẻ thanh toán của Khách Hàng sẽ do các đối tác Cổng thanh toán của OBO Stadium bảo mật theo tiêu chuẩn quốc tế PCI DSS.</p>
-          <p>- OBO Stadium có các biện pháp thích hợp về kỹ thuật và an ninh để ngăn chặn việc truy cập, sử dụng trái phép Thông Tin Khách Hàng. OBO Stadium cũng thường xuyên phối hợp với các chuyên gia bảo mật nhằm cập nhật những thông tin mới nhất về an ninh mạng để đảm bảo sự an toàn cho Thông Tin Khách Hàng khi Khách Hàng truy cập, đăng ký mở tài khoản và/hoặc sử dụng các tính năng của OBO Stadium. Khi thu thập dữ liệu, OBO Stadium thực hiện lưu giữ và bảo mật Thông Tin Khách Hàng tại hệ thống máy chủ và các Thông Tin Khách Hàng này được bảo đảm an toàn bằng các hệ thống tường lửa (firewall), các biện pháp kiểm soát truy cập, mã hóa dữ liệu.</p>
-          <p>- Các thông tin thẻ thanh toán của Khách Hàng được các đối tác cổng thanh toán của OBO Stadium bảo vệ theo tiêu chuẩn quốc tế. OBO Stadium không cho phép các bên thứ ba theo dõi hoặc thu thập thông tin của Khách Hàng trên các website thành phần của OBO Stadium.</p>
-          <p>- Đối với các tài khoản đã đóng chúng tôi vẫn lưu trữ Thông Tin Cá Nhân và truy cập của Khách Hàng để phục vụ cho các mục đích phòng chống gian lận, điều tra, giải đáp thắc mắc… Các Thông Tin Cá Nhân này sẽ được OBO Stadium lưu giữ trên hệ thống máy chủ tối đa trong vòng 12(mười hai) tháng kể từ ngày Khách Hàng đóng tài khoản trên OBO Stadium. Sau khi thời hạn này kết thúc, OBO Stadium sẽ tiến hành xóa vĩnh viễn Thông Tin Cá Nhân của Bạn.</p>
-          <p>- Khách Hàng tuyệt đối không được có bất kỳ hành vi sử dụng công cụ, chương trình để can thiệp trái phép vào hệ thống hay làm thay đổi cấu trúc dữ liệu của OBO Stadium, cũng như bất kỳ hành vi nào khác nhằm phát tán, cổ vũ cho các hoạt động với mục đích can thiệp, phá hoại hay xâm nhập vào dữ liệu của hệ thống OBO Stadium, cũng như các các hành vi mà pháp luật Việt Nam nghiêm cấm. Trong trường hợp OBO Stadium phát hiện Khách Hàng có hành vi cố tình giả mạo, gian lận, phát tán các thông tin trái phép,… OBO Stadium có quyền chuyển Thông Tin Cá Nhân của Khách Hàng cho các cơ quan có thẩm quyền để xử lý theo quy định pháp luật.</p>
+        <!-- Short Desc-->
+        <div class="short-desc-wrapper row">
+          <div class="short-desc container">
+            <div class="order-number-wrapper content">
+              <div class="title">M&Atilde; &Dstrok;&#x1A0;N H&Agrave;NG</div>
+              <div class="order-number main-content">12345</div>
+            </div>
+            <div class="order-date-wrapper content">
+              <div class="title">NGÀY ĐẶT BÁN</div>
+              <div class="order-date main-content">03/08/2019</div>
+            </div>
+            <div class="total-price-wrapper content">
+              <div class="title">DOANH THU</div>
+              <div class="total-price main-content">8,844,500 &#x20AB;</div>
+            </div>
+            <div class="payment-methods-wrapper content">
+              <div class="title">PH&#x1AF;&#x1A0;NG TH&#x1EE8;C THANH TO&Aacute;N</div>
+              <div class="payment-methods main-content">Thanh to&aacute;n khi nh&#x1EAD;n h&agrave;ng</div>
+            </div>
+          </div>
         </div>
-      </section>
+        <!-- Full Desc-->
+        <div class="full-desc-wrapper row">
+          <div class="full-desc container">
+            <div>
+              <h2 class="h2">Th&ocirc;ng tin &dstrok;&#x1A1;n h&agrave;ng bán</h2>
+              <div class="content">
+                <div>S&#x1EA2;N PH&#x1EA8;M</div>
+                <div>THÀNH TIỀN</div>
+              </div>
+              <div class="break-line"></div>
+              <div class="content">
+                <div class="product-details"><a class="product-name" href="./product-details.html">Adidas Yeezy Boost 700 Wave Runner Solid Grey</a>
+                  <div class="size">9US | 42.5VN | 26.2CM</div>
+                </div>
+                <div class="sub-price">9,030,700 &#x20AB;</div>
+              </div>
+              <div class="break-line"></div>
+              <div class="content-price">
+                <div class="sub-price-wrapper wrapper">
+                  <div class="text">GIÁ BÁN SẢN PHẨM</div>
+                  <div class="sub-price">9,310,000 &#x20AB;</div>
+                </div>
+              </div>
+              <div class="content-price">
+                <div class="shipping-price-wrapper wrapper">
+                  <div class="text">PHÍ VẬN HÀNH <i class="fas fa-question-circle" data-toggle="tooltip" data-placement="top" title="Phí vận hành bằng 5% giá bán của sản phẩm"></i></div>
+                  <div class="sub-price">465,500 &#x20AB;</div>
+                </div>
+              </div>
+              <div class="content-price">
+                <div class="total-price-wrapper wrapper">
+                  <div class="text">DOANH THU</div>
+                  <div class="sub-price">8,844,500 &#x20AB;</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="go-back-home-wrapper"><a class="go-back-home" href="./index.html">
+            <button class="btn btn-primary go-back-home-btn red-btn">Tr&#x1EDF; v&#x1EC1; trang ch&#x1EE7;</button></a></div>
+      </div>
       <!-- Modals-->
       <div class="modal fade" id="signInSignUp" tabindex="-1" role="dialog" aria-labelledby="signInSignUpLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -128,7 +175,7 @@
     <!-- Main Js-->
     <script type="text/javascript" src="./script/main.js"></script>
     <script src="./data.json"></script>
-    <!-- Common Js-->
+    <script src="./script/sell-confirm.js"></script>
     <script src="./script/except-home-page.js"></script>
   </body>
 </html>
