--- a/obo-stadium/sell-page.html
+++ b/obo-stadium/sell-page.html
@@ -103,10 +103,6 @@
                       <div class="text">Giá sản phẩm</div>
                       <div class="sub-price-showing asks"> </div>
                     </div>
-                    <div class="shipping-price price-include">
-                      <div class="text">Phí vận chuyển</div>
-                      <div class="shipping-price-showing asks">50,000 &#x20AB;</div>
-                    </div>
                     <div class="process-price price-include">
                       <div class="text">Phí vận hành <i class="fas fa-question-circle" data-toggle="tooltip" data-placement="top" title="Phí vận hành bằng 3% giá bán của sản phẩm"></i></div>
                       <div class="process-price-showing asks"> </div>
@@ -123,12 +119,8 @@
                       <div class="text">Giá sản phẩm</div>
                       <div class="sub-price-showing sell-now"> </div>
                     </div>
-                    <div class="shipping-price price-include">
-                      <div class="text">Phí vận chuyển</div>
-                      <div class="shipping-price-showing sell-now">50.000 &#x20AB;</div>
-                    </div>
                     <div class="process-price price-include">
-                      <div class="text">Phí vận hành <i class="fas fa-question-circle" data-toggle="tooltip" data-placement="top" title="Phí vận hành bằng 3% giá bán của sản phẩm"></i></div>
+                      <div class="text">Phí vận hành <i class="fas fa-question-circle" data-toggle="tooltip" data-placement="top" title="Phí vận hành bằng 5% giá bán của sản phẩm"></i></div>
                       <div class="process-price-showing sell-now"> </div>
                     </div>
                     <div class="total-price price-include">
@@ -138,8 +130,8 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <button class="btn btn-primary confirm-btn red-btn">&Dstrok;&#x1EB7;t b&aacute;n</button>
+            </div><a href="./sell-confirm.html">
+              <button class="btn btn-primary confirm-btn red-btn">&Dstrok;&#x1EB7;t b&aacute;n</button></a>
           </section>
         </div>
       </div>
@@ -270,7 +262,9 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="logo col-md-3 col-12 text-md-left text-center"><img class="img-fluid" src="./image/logo-white.png" alt="logo"/></div>
-          <div class="footer-link col-md-9 col-12 d-flex justify-content-md-end align-items-center flex-md-row flex-column"><a class="item" href="./faqs.html">Các câu hỏi thường gặp</a><a class="item" href="./rules.html">Điều khoản</a><a class="item" href="./policy.html">Chính sách</a></div>
+          <div class="footer-link col-md-9 col-12 d-flex justify-content-md-end align-items-center flex-md-row flex-column">
+            <div class="footer-menu"><a class="item" href="./faqs.html">Các câu hỏi thường gặp</a><a class="item" href="./rules.html">Điều khoản</a><a class="item" href="./policy.html">Chính sách</a></div>
+          </div>
         </div>
       </div>
     </footer>
