--- a/techmaster-project/jobs-module/index.html
+++ b/techmaster-project/jobs-module/index.html
@@ -12,8 +12,50 @@
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
-  <link rel="stylesheet" href="./resources/css/index.css">
-  <title>Hello, world!</title>
+  <link rel="stylesheet" href="./resources/css/main.css">
+  <link rel="stylesheet" href="./resources/css/job-item.css">
+  <style>
+    .jobs-carousel .see-more-btn {
+      padding: 10px 24px;
+      line-height: 1.1875rem;
+      margin: auto;
+      margin-top: 50px;
+    }
+
+    .jobs-carousel-header {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 20px;
+    }
+
+    .jobs-carousel-header .carousel-title {
+      font-size: 1.5rem;
+      line-height: 1.75rem;
+      color: #464646;
+    }
+
+    .jobs-carousel-header .icon {
+      padding: 8px 12px;
+      color: #757575;
+      line-height: 1.3125rem;
+      font-size: 1.125rem;
+      border: 2px solid #1A41B2;
+      border-radius: 4px;
+    }
+
+    .jobs-content-row {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .jobs-item {
+      width: calc(100% - 30px);
+      background: transparent;
+      box-shadow: none;
+      border-bottom: 1px solid #757575;
+    }
+  </style>
+  <title>Index</title>
 </head>
 
 <body>
@@ -35,7 +77,125 @@
     <div class="jobs-carousel-content-wrapper">
       <div class="jobs-carousel-content">
 
-        <div class="jobs-content-row">
+        <div class="jobs-content-column">
+
+          <div class="jobs-item">
+            <div class="company-logo">
+              <img src="./resources/image/incepit-logo.jpg" alt="company-logo">
+            </div>
+
+            <div class="jobs-content">
+              <div class="company-name">
+                IncepIT
+              </div>
+
+              <div class="job-name">
+                UI-UX Designer (HTML5/JavaScript)
+              </div>
+
+              <div class="salary">
+                <i class="fas fa-dollar-sign"></i> From $1.000
+              </div>
+
+              <div class="location-company-type">
+                Hồ Chí Minh - Outsourcing
+              </div>
+
+              <div class="requirement">
+                <div class="requirement-item">
+                  UI-UX
+                </div>
+
+                <div class="requirement-item">
+                  HTML5
+                </div>
+
+                <div class="requirement-item">
+                  Designer
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="jobs-item">
+            <div class="company-logo">
+              <img src="./resources/image/incepit-logo.jpg" alt="company-logo">
+            </div>
+
+            <div class="jobs-content">
+              <div class="company-name">
+                IncepIT
+              </div>
+
+              <div class="job-name">
+                UI-UX Designer (HTML5/JavaScript)
+              </div>
+
+              <div class="salary">
+                <i class="fas fa-dollar-sign"></i> From $1.000
+              </div>
+
+              <div class="location-company-type">
+                Hồ Chí Minh - Outsourcing
+              </div>
+
+              <div class="requirement">
+                <div class="requirement-item">
+                  UI-UX
+                </div>
+
+                <div class="requirement-item">
+                  HTML5
+                </div>
+
+                <div class="requirement-item">
+                  Designer
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="jobs-item">
+            <div class="company-logo">
+              <img src="./resources/image/incepit-logo.jpg" alt="company-logo">
+            </div>
+
+            <div class="jobs-content">
+              <div class="company-name">
+                IncepIT
+              </div>
+
+              <div class="job-name">
+                UI-UX Designer (HTML5/JavaScript)
+              </div>
+
+              <div class="salary">
+                <i class="fas fa-dollar-sign"></i> From $1.000
+              </div>
+
+              <div class="location-company-type">
+                Hồ Chí Minh - Outsourcing
+              </div>
+
+              <div class="requirement">
+                <div class="requirement-item">
+                  UI-UX
+                </div>
+
+                <div class="requirement-item">
+                  HTML5
+                </div>
+
+                <div class="requirement-item">
+                  Designer
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="jobs-content-column">
           <div class="jobs-item">
             <div class="company-logo">
               <img src="./resources/image/incepit-logo.jpg" alt="company-logo">
@@ -151,123 +311,7 @@
           </div>
         </div>
 
-        <div class="jobs-content-row">
-          <div class="jobs-item">
-            <div class="company-logo">
-              <img src="./resources/image/incepit-logo.jpg" alt="company-logo">
-            </div>
-
-            <div class="jobs-content">
-              <div class="company-name">
-                IncepIT
-              </div>
-
-              <div class="job-name">
-                UI-UX Designer (HTML5/JavaScript)
-              </div>
-
-              <div class="salary">
-                <i class="fas fa-dollar-sign"></i> From $1.000
-              </div>
-
-              <div class="location-company-type">
-                Hồ Chí Minh - Outsourcing
-              </div>
-
-              <div class="requirement">
-                <div class="requirement-item">
-                  UI-UX
-                </div>
-
-                <div class="requirement-item">
-                  HTML5
-                </div>
-
-                <div class="requirement-item">
-                  Designer
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="jobs-item">
-            <div class="company-logo">
-              <img src="./resources/image/incepit-logo.jpg" alt="company-logo">
-            </div>
-
-            <div class="jobs-content">
-              <div class="company-name">
-                IncepIT
-              </div>
-
-              <div class="job-name">
-                UI-UX Designer (HTML5/JavaScript)
-              </div>
-
-              <div class="salary">
-                <i class="fas fa-dollar-sign"></i> From $1.000
-              </div>
-
-              <div class="location-company-type">
-                Hồ Chí Minh - Outsourcing
-              </div>
-
-              <div class="requirement">
-                <div class="requirement-item">
-                  UI-UX
-                </div>
-
-                <div class="requirement-item">
-                  HTML5
-                </div>
-
-                <div class="requirement-item">
-                  Designer
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="jobs-item">
-            <div class="company-logo">
-              <img src="./resources/image/incepit-logo.jpg" alt="company-logo">
-            </div>
-
-            <div class="jobs-content">
-              <div class="company-name">
-                IncepIT
-              </div>
-
-              <div class="job-name">
-                UI-UX Designer (HTML5/JavaScript)
-              </div>
-
-              <div class="salary">
-                <i class="fas fa-dollar-sign"></i> From $1.000
-              </div>
-
-              <div class="location-company-type">
-                Hồ Chí Minh - Outsourcing
-              </div>
-
-              <div class="requirement">
-                <div class="requirement-item">
-                  UI-UX
-                </div>
-
-                <div class="requirement-item">
-                  HTML5
-                </div>
-
-                <div class="requirement-item">
-                  Designer
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="jobs-content-row">
+        <div class="jobs-content-column">
           <div class="jobs-item">
             <div class="company-logo">
               <img src="./resources/image/incepit-logo.jpg" alt="company-logo">
@@ -386,7 +430,9 @@
       </div>
     </div>
 
-    <button class="see-more-btn">Xem thêm</button>
+    <a href="./jobs-page.html">
+      <button class="see-more-btn button blue-btn">Xem thêm</button>
+    </a>
   </div>
 
   <!-- Optional JavaScript -->
