--- a/techmaster-project/jobs-module/jobs-details.html
+++ b/techmaster-project/jobs-module/jobs-details.html
@@ -148,6 +148,10 @@
       margin: 20px 0;
     }
 
+    .company-infomation .company-name {
+      display: block;
+    }
+
     .company-infomation .short-description {
       margin-bottom: 10px;
       font-size: 16px;
@@ -252,9 +256,9 @@
         </div>
       </div>
       <a href="./apply.html">
-        <div class="apply-btn button blue-btn">
+        <button class="apply-btn button blue-btn">
           Ứng tuyển ngay
-        </div>
+        </button>
       </a>
     </div>
   </div>
@@ -371,7 +375,52 @@
             Ứng tuyển ngay
           </div>
         </div>
+      </div>
 
+      <div class="col-lg-4">
+        <div class="right-side">
+          <div class="company-infomation">
+            <div class="logo">
+              <img src="./resources/image/incepit-logo.jpg" alt="company-logo" class="img-fluid">
+            </div>
+
+            <a href="./company-details.html" class="company-name">
+              IncepIT
+            </a>
+
+            <div class="short-description">
+              We are a young and expanding company, we're providing services for Software development like Web, Mobile,
+              Enterprise applications to companies globally. Our team has just more than 20 people with highly skilled,
+              and most having work experience in diverse areas of Software development. We have been providing the best
+              works and success to our customer, their success is our happiness in working.
+            </div>
+
+            <div class="company-type icon">
+              <i class="fas fa-cog fa-fw"></i> Outsourcing
+            </div>
+
+            <div class="company-size icon">
+              <i class="fas fa-users fa-fw"></i> 10 - 24 người
+            </div>
+
+            <div class="company-day-working icon">
+              <i class="fas fa-calendar-alt fa-fw"></i> Thứ 2 - Thứ 6
+            </div>
+          </div>
+
+          <div class="email-for-jobs">
+            <h2 class="title">
+              Nhận thông báo việc làm
+            </h2>
+
+            <input type="text" class="form-control email-input" placeholder="Để lại email của bạn">
+
+            <button class="button orange-btn send-email-btn">Nhận việc làm tương tự</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-8">
         <div class="jobs-showcase-wrapper">
           <div class="title">
             <h2>
@@ -606,49 +655,7 @@
           </div>
 
         </div>
-      </div>
 
-      <div class="col-lg-4">
-        <div class="right-side">
-          <div class="company-infomation">
-            <div class="logo">
-              <img src="./resources/image/incepit-logo.jpg" alt="company-logo" class="img-fluid">
-            </div>
-
-            <div class="company-name">
-              IncepIT
-            </div>
-
-            <div class="short-description">
-              We are a young and expanding company, we're providing services for Software development like Web, Mobile,
-              Enterprise applications to companies globally. Our team has just more than 20 people with highly skilled,
-              and most having work experience in diverse areas of Software development. We have been providing the best
-              works and success to our customer, their success is our happiness in working.
-            </div>
-
-            <div class="company-type icon">
-              <i class="fas fa-cog fa-fw"></i> Outsourcing
-            </div>
-
-            <div class="company-size icon">
-              <i class="fas fa-users fa-fw"></i> 10 - 24 người
-            </div>
-
-            <div class="company-day-working icon">
-              <i class="fas fa-calendar-alt fa-fw"></i> Thứ 2 - Thứ 6
-            </div>
-          </div>
-
-          <div class="email-for-jobs">
-            <h2 class="title">
-              Nhận thông báo việc làm
-            </h2>
-
-            <input type="text" class="form-control email-input" placeholder="Để lại email của bạn">
-
-            <button class="button orange-btn send-email-btn">Nhận việc làm tương tự</button>
-          </div>
-        </div>
       </div>
     </div>
   </div>
