update post job page

--- a/techmaster-project/jobs-module/jobs-page.html
+++ b/techmaster-project/jobs-module/jobs-page.html
@@ -262,7 +262,9 @@
 
 <body>
   <div class="container">
-    <button class="post-new-jobs blue-btn button">Đăng tin tuyển dụng</button>
+    <a href="./post-job.html">
+      <button class="post-new-jobs blue-btn button">Đăng tin tuyển dụng</button>
+    </a>
 
     <div class="searching-field">
       <form action="">
